@@ -90,6 +90,10 @@ function rcmail_contact_editform($attrib)
 
     // add some labels to client
     $RCMAIL->output->add_label('noemailwarning', 'nonamewarning');
+    
+    // copy (parsed) address template to client
+    if (preg_match_all('/\{([a-z0-9]+)\}([^{]*)/i', $RCMAIL->config->get('address_template', ''), $templ, PREG_SET_ORDER))
+      $RCMAIL->output->set_env('address_template', $templ);
 
     $i_size = !empty($attrib['size']) ? $attrib['size'] : 40;
     $t_rows = !empty($attrib['textarearows']) ? $attrib['textarearows'] : 10;
